# CoderDecoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/coder/: coder.cpp  coder.h
src/decoder/: decoder.cpp  decoder.h
